--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.839.0",
+    "@google-cloud/translate": "^9.1.0",
+    "@google-cloud/vision": "^5.2.0",
     "@prisma/client": "^6.10.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
-    "multer": "^2.0.1"
+    "express-session": "^1.18.1",
+    "multer": "^2.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "prisma": "^6.10.1"
