--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.521.0",
     "@aws-sdk/client-s3": "^3.839.0",
     "@google-cloud/translate": "^9.1.0",
     "@google-cloud/vision": "^5.2.0",
