--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sanitize-html": "^2.17.0"
+    "sanitize-html": "^2.17.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "prisma": "^6.10.1"
