--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "sanitize-html": "^2.17.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "connect-pg-simple": "^8.0.0"
+
   },
   "devDependencies": {
     "prisma": "^6.10.1"
